# simple-saca

./: Cargo.toml  README.md
src/: compact_vec.rs  lib.rs  main.rs  suffix_array.rs
