[package]
name = "simple-saca"
version = "0.1.0"
edition = "2021"

[features]
third_party = ["libdivsufsort-rs", "sais-sys"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
needletail = "0.5.1"
rayon = "1.7.0"
libc = "0.2.147"
libdivsufsort-rs = { version = "0.1.2", optional = true }
sais-sys = { git = "https://github.com/Daniel-Liu-c0deb0t/libsais-rs", default-features = false, features = ["openmp", "sais64"], optional = true }
